--- a/src/common/Card/Card.module.scss
+++ b/src/common/Card/Card.module.scss
@@ -1,11 +1,15 @@
 
 .glass{
+    width: 400px;
+    height: 350px;
+    display: flex;
     background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0));
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px);
     border-radius: 20px;
     border:1px solid rgba(255, 255, 255, 0.18);
     box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
+    margin: 25px;
 }
 
 .content {
